# airflow-dags-minikube

./: bash_dag_hello_world.py  consumer.py  group_dag.py  producer.py  pyproject.toml  sub_dags.py  user_processing.py
groups/: group_downloads.py
subdags/: group_downloads.py  subdag_downloads.py
